--- a/src/main/webapp/Views/Template/top.xhtml
+++ b/src/main/webapp/Views/Template/top.xhtml
@@ -18,7 +18,8 @@
 		<p:panelGrid columns="3" layout="grid">            
 		    <h:graphicImage value="/Images/Sypore_Logo.jpg" width="220" />
 		    <h:outputText value="ParTracker" style="font-size: 30px; font-weight: bold;" /> 
-		    <h:outputText value="#{sharedData.getFullName()}" style="float:right; margin-top:10px;" /> 
+		   <!--  <h:outputText value="#{principal}" style="float:right; margin-top:10px;" /> -->
+		  <h:outputText value="#{sharedData.getFullName()}" style="float:right; margin-top:10px;" />
 		</p:panelGrid>
 
 		<h:form>
