--- a/src/main/webapp/Views/Unsecured/Login/index.xhtml
+++ b/src/main/webapp/Views/Unsecured/Login/index.xhtml
@@ -21,7 +21,7 @@ display:none;
 <h:body>
 
 
-<p:growl widgetVar="growl" showDetail="false" sticky="true"  />
+<p:growl widgetVar="growl" showDetail="false" />
 <h2 class="c" style="text-align: center; margin:10% auto 2%;">SIGN IN</h2>
 			<b:well styleClass="c" >
 			<h:form class="form-signin">	
